<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5474b8"
    tools:context="aris.kots.trackmyday.MainActivity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:padding="5dp"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/activities_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp"
        android:text="@string/detect"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <LinearLayout
        android:id="@+id/upperLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activities_label"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <Button
            android:id="@+id/walking"
            android:layout_marginRight="3dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@mipmap/ic_directions_walk_black_48dp" />

        <Button
            android:id="@+id/running"
            android:layout_marginRight="3dp"
            android:layout_marginLeft="3dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@mipmap/running" />

        <Button
            android:id="@+id/onVehicle"
            android:layout_marginLeft="3dp"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@mipmap/ic_directions_car_black_48dp" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/start_tracking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dp"
            android:minWidth="250dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            fancy:fb_borderWidth="2dp"
            fancy:fb_defaultColor="#ffffff"
            fancy:fb_focusColor="#5474b8"
            fancy:fb_radius="30dp"
            fancy:fb_text="@string/start_tracking"
            fancy:fb_textColor="@color/colorPrimary"
            fancy:fb_textFont="fonts/Roboto-Bold.ttf"
            fancy:fb_textSize="27sp" />

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/view_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/start_tracking"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:minWidth="250dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            fancy:fb_borderWidth="2dp"
            fancy:fb_defaultColor="#ffffff"
            fancy:fb_focusColor="#5474b8"
            fancy:fb_radius="30dp"
            fancy:fb_text="@string/view_data"
            fancy:fb_textColor="@color/colorPrimary"
            fancy:fb_textFont="fonts/Roboto-Bold.ttf"
            fancy:fb_textSize="27sp" />

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/view_statistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/view_data"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:minWidth="250dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            fancy:fb_borderWidth="2dp"
            fancy:fb_defaultColor="#ffffff"
            fancy:fb_focusColor="#5474b8"
            fancy:fb_radius="30dp"
            fancy:fb_text="@string/view_stats"
            fancy:fb_textColor="@color/colorPrimary"
            fancy:fb_textFont="fonts/Roboto-Bold.ttf"
            fancy:fb_textSize="27sp"   />

    </RelativeLayout>

    <TextView
        android:id="@+id/scoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/score"
        android:layout_centerHorizontal="true"
        android:text="@string/scoreLabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:shadowColor="@android:color/black"
        android:shadowDx="3"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:text="17128"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/white"
        android:textSize="40sp" />

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/redeem"
        android:layout_marginBottom="4dp"
        android:layout_marginRight="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/scoreLabel"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="#ffffff"
        fancy:fb_focusColor="#5474b8"
        fancy:fb_radius="5dp"
        fancy:fb_text="@string/redeem"
        fancy:fb_textColor="@color/colorPrimary"
        fancy:fb_textFont="fonts/Roboto-Regular.ttf"
        fancy:fb_textSize="18sp" />

</RelativeLayout>
