<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="3dp"
    android:paddingLeft="6dp"
    android:paddingRight="6dp"
    android:paddingTop="3dp">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@android:color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="6dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="6dp">

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="2dp"
                android:background="@mipmap/ic_delete_black_48dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/deleteButton">


                <TextView
                    android:id="@+id/card_recording_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="1dp"
                    android:text="jul 13,2016 16:20"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <View
                    android:id="@+id/view_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_below="@+id/card_recording_date"
                    android:background="@color/colorPrimary" />

                <LinearLayout
                    android:id="@+id/middleLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/view_line"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/card_recording_distance_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="1dp"
                            android:layout_weight="1"
                            android:text="@string/distance"
                            android:textColor="#000000"
                            android:textSize="@dimen/labelSize2" />

                        <TextView
                            android:id="@+id/card_recording_distance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0 meters "
                            android:textColor="#000000"
                            android:textSize="@dimen/labelSizeContent2" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/card_recording_average_speed_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/speed"
                            android:textColor="#000000"
                            android:textSize="@dimen/labelSize2" />

                        <TextView
                            android:id="@+id/card_recording_average_speed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0 km/h"
                            android:textColor="#000000"
                            android:textSize="@dimen/labelSizeContent2" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/card_recording_elapse_time_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/time"
                            android:textColor="#000000"
                            android:textSize="@dimen/labelSize2" />

                        <TextView
                            android:id="@+id/card_recording_elapse_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="00:00:00"
                            android:textColor="#000000"
                            android:textSize="@dimen/labelSizeContent2" />

                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>