<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myBG"
    tools:context="aris.kots.trackmyday.TrackActivity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_track">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.47"
            android:paddingRight="5dp"
            android:paddingBottom="4dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.50"
                    android:paddingRight="2dp">

                    <android.support.v7.widget.CardView
                        card_view:cardBackgroundColor="#ffffff"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:padding="10dp"
                            android:id="@+id/accuracy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#000000"
                            android:layout_alignParentTop="true"
                            android:textSize="15sp" />
                        <RelativeLayout
                            android:id="@+id/innerLeft"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center">

                            <TextView
                                android:id="@+id/elapseTime"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:text="@string/elapseTime"
                                android:textColor="#000000"
                                android:textSize="@dimen/labelSize"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/timer"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/elapseTime"
                                android:layout_centerHorizontal="true"
                                android:text="00:00:00"
                                android:textColor="#000000"
                                android:textSize="@dimen/labelSizeContent"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/current_speed"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/timer"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="6dp"
                                android:text="@string/currentSpeed"
                                android:textColor="#000000"
                                android:textSize="@dimen/labelSize"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/speed"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/current_speed"
                                android:layout_centerHorizontal="true"
                                android:text="0.0 km/h"
                                android:textColor="#000000"
                                android:textSize="@dimen/labelSizeContent"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/distanceText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/speed"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="6dp"
                                android:text="@string/totalDistance"
                                android:textSize="@dimen/labelSize"
                                android:textColor="#000000"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/distance"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/distanceText"
                                android:layout_centerHorizontal="true"
                                android:text="0 meters"
                                android:textColor="#000000"
                                android:textSize="@dimen/labelSizeContent"
                                android:textStyle="bold" />

                        </RelativeLayout>
                    </android.support.v7.widget.CardView>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.50"
                    android:paddingLeft="2dp">

                    <android.support.v7.widget.CardView
                        card_view:cardBackgroundColor="#ffffff"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RelativeLayout
                            android:id="@+id/innerLeft2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_above="@+id/finishButton"
                            android:gravity="center">

                            <TextView
                                android:id="@+id/activityLabel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:text="@string/activity"
                                android:textColor="#000000"
                                android:textSize="@dimen/labelSize"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/activity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/activityLabel"
                                android:layout_centerHorizontal="true"
                                android:textColor="#000000"
                                android:textSize="@dimen/labelSizeContent"
                                android:textStyle="bold" />
                            <mehdi.sakout.fancybuttons.FancyButton
                                android:id="@+id/pauseButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/activity"
                                android:layout_centerHorizontal="true"
                                android:paddingBottom="6dp"
                                android:paddingLeft="20dp"
                                android:paddingRight="20dp"
                                android:paddingTop="6dp"
                                android:layout_marginTop="6dp"
                                fancy:fb_borderWidth="2dp"
                                fancy:fb_defaultColor="#5474b8"
                                fancy:fb_focusColor="#5E35B1"
                                fancy:fb_radius="12dp"
                                fancy:fb_text=" PAUSE"
                                fancy:fb_textColor="#ffffff"
                                fancy:fb_textFont="fonts/Roboto-Black.ttf"
                                fancy:fb_textSize="@dimen/labelSize" />
                            <mehdi.sakout.fancybuttons.FancyButton
                                android:id="@+id/finishButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_below="@+id/pauseButton"
                                android:paddingBottom="6dp"
                                android:paddingLeft="20dp"
                                android:paddingRight="20dp"
                                android:paddingTop="6dp"
                                android:layout_marginTop="6dp"
                                fancy:fb_borderWidth="2dp"
                                fancy:fb_defaultColor="#5474b8"
                                fancy:fb_focusColor="#5E35B1"
                                fancy:fb_radius="12dp"
                                fancy:fb_text=" FINISH"
                                fancy:fb_textColor="#ffffff"
                                fancy:fb_textFont="fonts/Roboto-Black.ttf"
                                fancy:fb_textSize="@dimen/labelSize" />
                            <TextView
                                android:id="@+id/switchText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/finishButton"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="6dp"
                                android:textColor="#000000"
                                android:text="Auto Focus" />

                            <Switch
                                android:id="@+id/switch1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/switchText"
                                android:layout_centerHorizontal="true"
                                android:layout_marginBottom="10dp"
                                android:checked="true" />
                        </RelativeLayout>
                    </android.support.v7.widget.CardView>
                </RelativeLayout>
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.53"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp">

            <!--<ProgressBar-->
            <!--android:id="@+id/progressBar"-->
            <!--style="?android:attr/progressBarStyleHorizontal"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentTop="true"-->
            <!--android:layout_marginBottom="-6dp"-->
            <!--android:layout_marginTop="-6dp"-->
            <!--android:indeterminate="false"-->
            <!--android:indeterminateTint="#5474b8" />-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:context="aris.kots.trackmyday.TrackActivity" />
            </android.support.v7.widget.CardView>

        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
